[](refact) Update serial plugin

--- a/render/src/lib/views/sidebar.vertical/port.options.write/styles.less
+++ b/render/src/lib/views/sidebar.vertical/port.options.write/styles.less
@@ -17,10 +17,16 @@
             list-style: none;
         }
     }
+    & span {
+        margin-left: 2%;
+    }
     & span.delimiter{
         position: relative;
         display: block;
         height: 0.5rem;
         width: 1px;
+    }
+    & mat-error {
+        color: #ff0000;
     }
 }
