--- a/render/src/lib/views/sidebar.vertical/port.available/template.html
+++ b/render/src/lib/views/sidebar.vertical/port.available/template.html
@@ -22,7 +22,15 @@
                     type="text" 
                     placeholder="Type a command"
                     (keyup.enter)="_ng_send($event)"
-                    aria-label="Filter">
+                    aria-label="Filter"
+                    [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete" class="regular"
+                [classList]="'recent-requests'"
+                [disableRipple]="true">
+                <mat-option *ngFor="let recent of _ng_recent" [value]="recent" [attr.title]="recent" class="recent-requests small t-small">
+                    {{recent}}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
     </div>
 </div>
