[#3](refact) Review changes; cmd history update

--- a/render/src/lib/views/sidebar.vertical/port.available/template.html
+++ b/render/src/lib/views/sidebar.vertical/port.available/template.html
@@ -23,6 +23,7 @@
                     placeholder="Type a command"
                     (keyup.enter)="_ng_send($event)"
                     aria-label="Filter"
+                    (focus)="_ng_loadCommands()"
                     [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete" class="regular"
                 [classList]="'recent-requests'"
