[#1003](fix) Fix invisible gear icon

--- a/render/src/lib/views/sidebar.vertical/port.available/styles.less
+++ b/render/src/lib/views/sidebar.vertical/port.available/styles.less
@@ -29,6 +29,13 @@
     & p {
         margin-right: 20px;
     }
+    & p.path {
+        width: 100%;
+        min-width: 30%;
+        max-width: 50%;
+        word-break: break-all;
+        white-space: break-spaces;
+    }
     & mat-icon {
         padding-top: 7px;
     }
