--- a/render/src/lib/views/sidebar.vertical/port.available/template.html
+++ b/render/src/lib/views/sidebar.vertical/port.available/template.html
@@ -6,7 +6,7 @@
                 <mat-icon *ngIf="!_ng_isConnected">power_off</mat-icon>
             </div>
             <mat-icon *ngIf="!_ng_isAvailable">not_interested</mat-icon>
-            <p>{{port.path}}</p>
+            <p class="path">{{port.path}}</p>
             <p *ngIf="_ng_isAvailable" class="size t-small color-scheme-2">{{_ng_read()}}</p>
         </div>
         <mat-icon (click)="_ng_isAvailable ? _ng_onOptions() : _ng_onWarning()">settings</mat-icon>
