[#1238](fix) Fix styling for port names

--- a/render/src/lib/views/sidebar.vertical/port.available/styles.less
+++ b/render/src/lib/views/sidebar.vertical/port.available/styles.less
@@ -25,16 +25,15 @@
     }
     & div.right {
         display: flex;
+        overflow: hidden;
     }
     & p {
         margin-right: 20px;
     }
     & p.path {
-        width: 100%;
-        min-width: 30%;
-        max-width: 50%;
-        word-break: break-all;
-        white-space: break-spaces;
+        margin-left: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     & mat-icon {
         padding-top: 7px;
