--- a/render/src/lib/views/sidebar.vertical/port.available/styles.less
+++ b/render/src/lib/views/sidebar.vertical/port.available/styles.less
@@ -1,46 +1,47 @@
-@import '../../../../../../../theme/variables.less';
+@import "../../../../../../../theme/variables.less";
 
 :host {
-    & div.container {
-        position: relative;
-        overflow: hidden;
+  & div.container {
+    position: relative;
+    overflow: hidden;
+  }
+  & div.info {
+    justify-content: space-between;
+    display: flex;
+  }
+  & div.canvas {
+    text-align: left;
+    position: relative;
+    width: 110%;
+    height: 25px;
+    margin-bottom: 16px;
+    padding-left: 8px;
+    & div.holder {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: -5px;
     }
-    & div.info {
-        justify-content: space-between;
-        display: flex;
-    }
-    & div.canvas {
-        text-align:left;
-        position: relative;
-        width: 110%;
-        height: 25px;
-        margin-bottom: 16px;
-        & div.holder {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: -5px;
-        }
-    }
-    & div.right {
-        display: flex;
-        overflow: hidden;
-    }
-    & p {
-        margin-right: 20px;
-    }
-    & p.path {
-        margin-left: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-    & mat-icon {
-        padding-top: 7px;
-    }
-    & input {
-        width: calc(100% - 8px);
-        background: transparent;
-        padding-top: 7px;
-    }
+  }
+  & div.right {
+    display: flex;
+    overflow: hidden;
+  }
+  & p {
+    margin-right: 20px;
+  }
+  & p.path {
+    margin-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  & mat-icon {
+    padding-top: 7px;
+  }
+  & input {
+    width: calc(100% - 8px);
+    background: transparent;
+    padding-top: 7px;
+  }
 }
